tr and td can now be generated in view templates in a way that works on IE. Added more settings for spacing events in the timeline view. Fixed thumbnail view so that thumbnails are flowed horizontally line by line in IE.

--- a/exhibit/trunk/src/webapp/api/themes/classic/styles/thumbnail-view.css
+++ b/exhibit/trunk/src/webapp/api/themes/classic/styles/thumbnail-view.css
@@ -5,3 +5,12 @@ div.exhibit-thumbnailView-group {
 div.exhibit-thumbnailView-body {
 }
 
+div.exhibit-thumbnailView-itemContainer {
+    float:      left;
+}
+
+div.exhibit-thumbnailView-itemContainer-IE {
+    float:      left;
+    width:      0;
+    overflow:   visible;
+}
